--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,10 @@ steps:
 - task: CopyFiles@2
   inputs:
     sourceFolder: '$(Build.SourcesDirectory)'
-    contents: '**/$(BuildConfiguration)/**/?(*.exe)'
+    contents: '**/$(BuildConfiguration)/bin/Release/?(*.exe)'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
+    ArtifactName: 'Seatbelt'
     publishLocation: 'Container'
